--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
   },
   "homepage": "https://github.com/ankammaraod/flowerCatalog#readme",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
+    "cookie-session": "^2.0.0",
     "express": "^4.18.1",
+    "morgan": "^1.10.0",
     "server": "github:ankammaraod/server"
   },
   "devDependencies": {
